--- a/html/eje11.html
+++ b/html/eje11.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Formulario de Registro - Mi Web</h2>
-    <form action="eje11.html" method="get">
+    <form method="post" action="/php/ejercicio9.php">
         <p>Nombres: <input type="text" name="nombres" size="50"></p>
         <p>Apellidos: <input type="text" name="apellidos" size="50"></p>
         <p>Sexo: <input type="radio" name="sexo">Masculino <input type="radio" name="sexo">Femenino <input type="radio" name="sexo">No Binario</p>
